--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
   "homepage": "https://github.com/Ahmedmh9/Tech-Blog#readme",
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
+    "connect-session-sequelize": "^7.1.2",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-handlebars": "^6.0.1",
+    "express-session": "^1.17.2",
+    "find-config": "^1.0.0",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
   }
