--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
+  
   "name": "tech-blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "node seeds/seed.js"
+    "seed": "node seeds/seed.js",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
